# Generate_text

./: Gensim w2v-Copy1.ipynb  Gensim w2v.ipynb  Untitled.ipynb  gensim_models.ipynb  make_sentence_data.ipynb  make_sentence_digavis.ipynb  pyproject.toml  query_model.ipynb  test.ipynb
api/: Dockerfile  app.py  requirements.txt
appfolder/: Dockerfile  app2gcp-update.py  deployment.yaml  embedding.py  ingress.yaml  query_model.ipynb  query_model.py  requirements.txt
appfolder/.ipynb_checkpoints/: 01_query_model-checkpoint.py  02_compare_sentences-checkpoint.py  Dockerfile-checkpoint  query_model-checkpoint.ipynb  requirements-checkpoint.txt
appfolder/pages/: 02_compare_sentences.py  03_fixed_word_list.py
