[tool.poetry]
name = "generate-text"
version = "0.1.0"
description = ""
authors = ["Lars Johnsen", "Lars Magne Tungland"]
readme = "README.md"
packages = [{include = "generate_text"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gensim = "^4.3.2"
streamlit = "1.18.1"
scikit-learn = "^1.3.2"
altair = "4.2.2"
dhlab = "^2.28.0"
networkx = "^3.2.1"
beautifulsoup4 = "^4.12.2"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
